clusters/k3s-server/scrapeflow/app/coordinator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapeflow-coordinator
  namespace: scrapeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrapeflow-coordinator
  template:
    metadata:
      labels:
        app: scrapeflow-coordinator
    spec:
      containers:
        - name: coordinator
          image: k4rth/scrapeflow-coordinator:main-1789809937-421cbfec9e716374764db254b8f2b9f6ae598f46 # {"$imagepolicy": "flux-system:scrapeflow-coordinator-policy"}
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
