clusters/k3s-server/scrapeflow/app/http-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapeflow-http-worker
  namespace: scrapeflow
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: scrapeflow-http-worker
  template:
    metadata:
      labels:
        app: scrapeflow-http-worker
    spec:
      containers:
        - name: http-worker
          image: k4rth/scrapeflow-http-worker:main-1790703736-ef68942df01debb6c34f5b96e66d7b2ba9d4f060 # {"$imagepolicy": "flux-system:scrapeflow-http-worker-policy"}
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
