clusters/k3s-server/scrapeflow/app/llm-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapeflow-llm-worker
  namespace: scrapeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrapeflow-llm-worker
  template:
    metadata:
      labels:
        app: scrapeflow-llm-worker
    spec:
      containers:
        - name: llm-worker
          image: k4rth/scrapeflow-llm-worker:main-1790703735-ef68942df01debb6c34f5b96e66d7b2ba9d4f060 # {"$imagepolicy": "flux-system:scrapeflow-llm-worker-policy"}
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
